Attempt to fix bug on iOS

--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -655,6 +655,10 @@ body {
   justify-content: space-around;
   align-items: center;
   z-index: 1;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 .action__back__title {
   font-size: 1.6em;
