--- a/client/src/style/scss/components/_action.scss
+++ b/client/src/style/scss/components/_action.scss
@@ -74,6 +74,11 @@
     justify-content: space-around;
     align-items: center;
     z-index: 1;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+
     &__title {
       font-size: 1.6em;
       text-align: center;
